--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 .DS_Store
 data/query_result_4973.csv
+data/query_result_4189.csv
+data/query_result_4189_cleared.csv
+develop/bug-duplication-research/preprocess.py
